src/content/docs/v4/error-management/error-channel-operations.mdx
---
title: Error Channel Operations
description: Explore operations on the error channel in Effect, including error mapping, filtering, inspecting, merging, and flipping channels.
sidebar:
  order: 9
---

import { Aside } from "@astrojs/starlight/components"

In Effect you can perform various operations on the error channel of effects. These operations allow you to transform, inspect, and handle errors in different ways. Let's explore some of these operations.

## Map Operations

### mapError

The `Effect.mapError` function is used when you need to transform or modify an error produced by an effect, without affecting the success value. This can be helpful when you want to add extra information to the error or change its type.

**Example** (Mapping an Error)

Here, the error type changes from `string` to `Error`.

```ts twoslash import.meta.vitest name="mapping-an-error-1"
import { Effect } from "effect"

//      ┌─── Effect<number, string, never>
//      ▼
const simulatedTask = Effect.fail("Oh no!").pipe(Effect.as(1))

//      ┌─── Effect<number, Error, never>
//      ▼
const mapped = Effect.mapError(simulatedTask, (message) => new Error(message))

const error = await Effect.runPromise(Effect.flip(mapped))
error.message // => "Oh no!"
```

<Aside type="note">
  It's important to note that using the `Effect.mapError` function does not change the overall
  success or failure of the effect. It only transforms the values in the error channel while
  preserving the effect's original success or failure status.
</Aside>

### mapBoth

The `Effect.mapBoth` function allows you to apply transformations to both channels: the error channel and the success channel of an effect. It takes two map functions as arguments: one for the error channel and the other for the success channel.

**Example** (Mapping Both Success and Error)

```ts twoslash import.meta.vitest name="mapping-both-success-and-error-1"
import { Effect } from "effect"

//      ┌─── Effect<number, string, never>
//      ▼
const simulatedTask = Effect.fail("Oh no!").pipe(Effect.as(1))

//      ┌─── Effect<boolean, Error, never>
//      ▼
const modified = Effect.mapBoth(simulatedTask, {
  onFailure: (message) => new Error(message),
  onSuccess: (n) => n > 0,
})

const error = await Effect.runPromise(Effect.flip(modified))
error.message // => "Oh no!"
```

<Aside type="note">
  It's important to note that using the `Effect.mapBoth` function does not change the overall
  success or failure of the effect. It only transforms the values in the error and success channels
  while preserving the effect's original success or failure status.
</Aside>

## Filtering the Success Channel

The Effect library provides several operators to filter values on the success channel based on a given predicate.

These operators offer different strategies for handling cases where the predicate fails:

| API                                  | Description                                                                                                                                                                                                                                       |
| ------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `filterOrFail`                       | This operator filters the values on the success channel based on a predicate. If the predicate fails for any value, the original effect fails with an error.                                                                                      |
| `filterOrDie` / `filterOrDieMessage` | These operators also filter the values on the success channel based on a predicate. If the predicate fails for any value, the original effect terminates abruptly. The `filterOrDieMessage` variant allows you to provide a custom error message. |
| `filterOrElse`                       | This operator filters the values on the success channel based on a predicate. If the predicate fails for any value, an alternative effect is executed instead.                                                                                    |

**Example** (Filtering Success Values)

```ts twoslash import.meta.vitest name="filtering-success-values-1"
import { Effect, Random, Cause } from "effect"

// Fail with a custom error if predicate is false
const task1 = Effect.filterOrFail(
  Random.nextBetween(-1, 1),
  (n) => n >= 0,
  () => "random number is negative",
)

// Die with a custom exception if predicate is false
const task2 = Effect.filterOrFail(
  Random.nextBetween(-1, 1),
  (n) => n >= 0,
  () => new Cause.IllegalArgumentError("random number is negative"),
).pipe(Effect.orDie)

// Die with a custom error message if predicate is false
const task3 = Effect.filterOrFail(
  Random.nextBetween(-1, 1),
  (n) => n >= 0,
  () => "random number is negative",
).pipe(Effect.orDie)

// Run an alternative effect if predicate is false
const task4 = Effect.filterOrElse(
  Random.nextBetween(-1, 1),
  (n) => n >= 0,
  () => task3,
)
```

It's important to note that depending on the specific filtering operator used, the effect can either fail, terminate abruptly, or execute an alternative effect when the predicate fails. Choose the appropriate operator based on your desired error handling strategy and program logic.

The filtering APIs can also be combined with [user-defined type guards](https://www.typescriptlang.org/docs/handbook/2/narrowing.html#using-type-predicates) to improve type safety and code clarity. This ensures that only valid types pass through.

**Example** (Using a Type Guard)

```ts twoslash {15} import.meta.vitest name="using-a-type-guard-1"
import { Effect, pipe } from "effect"

// Define a user interface
interface User {
  readonly name: string
}

// Simulate an asynchronous authentication function
declare const auth: () => Promise<User | null>

const program = pipe(
  Effect.promise(() => auth()),
  // Use filterOrFail with a custom type guard to ensure user is not null
  Effect.filterOrFail(
    (user): user is User => user !== null, // Type guard
    () => new Error("Unauthorized"),
  ),
  // 'user' now has the type `User` (not `User | null`)
  Effect.map((user) => user.name),
)
```

In the example above, a guard is used within the `filterOrFail` API to ensure that the `user` is of type `User` rather than `User | null`.

If you prefer, you can utilize a pre-made guard like [Predicate.isNotNull](/docs/v4/api/effect/Predicate#isNotNull) for simplicity and consistency.

## Inspecting Errors

Similar to [tapping](/docs/getting-started/building-pipelines/#tap) for success values, Effect provides several operators for inspecting error values.
These operators allow developers to observe failures or underlying issues without modifying the outcome.

### tapError

Executes an effectful operation to inspect the failure of an effect without altering it.

**Example** (Inspecting Errors)

```ts twoslash import.meta.vitest name="inspecting-errors-1"
import { Effect, Console, Exit } from "effect"

// Simulate a task that fails with an error
const task: Effect.Effect<number, string> = Effect.fail("NetworkError")

// Use tapError to log the error message when the task fails
const tapping = Effect.tapError(task, (error) => Console.log(`expected error: ${error}`))

Effect.runFork(tapping)
/*
Output:
expected error: NetworkError
*/

await Effect.runPromiseExit(tapping) // => Exit.fail("NetworkError")
```

### tapErrorTag

This function allows you to inspect errors that match a specific tag, helping you handle different error types more precisely.

**Example** (Inspecting Tagged Errors)

```ts twoslash import.meta.vitest name="inspecting-tagged-errors-1"
import { Effect, Console, Data, Exit } from "effect"

class NetworkError extends Data.TaggedError("NetworkError")<{
  readonly statusCode: number
}> {}

class ValidationError extends Data.TaggedError("ValidationError")<{
  readonly field: string
}> {}

// Create a task that fails with a NetworkError
const task: Effect.Effect<number, NetworkError | ValidationError> = Effect.fail(
  new NetworkError({ statusCode: 504 }),
)

// Use tapErrorTag to inspect only NetworkError types
// and log the status code
const tapping = Effect.tapErrorTag(task, "NetworkError", (error) =>
  Console.log(`expected error: ${error.statusCode}`),
)

Effect.runFork(tapping)
/*
Output:
expected error: 504
*/

await Effect.runPromiseExit(tapping) // => Exit.fail(new NetworkError({ statusCode: 504 }))
```

### tapErrorCause

This function inspects the complete cause of an error, including failures and defects.

**Example** (Inspecting Error Causes)

```ts twoslash import.meta.vitest name="inspecting-error-causes-1"
import { Effect, Console, Exit } from "effect"

// Create a task that fails with a NetworkError
const task1: Effect.Effect<number, string> = Effect.fail("NetworkError")

const tapping1 = Effect.tapCause(task1, (cause) => Console.log(`error cause: ${cause}`))

Effect.runFork(tapping1)
/*
Output:
error cause: Cause([Fail("NetworkError")])
*/

// Simulate a severe failure in the system
const task2: Effect.Effect<number, string> = Effect.die(new Error("Something went wrong"))

const tapping2 = Effect.tapCause(task2, (cause) => Console.log(`error cause: ${cause}`))

Effect.runFork(tapping2)
/*
Output:
error cause: Cause([Die(Error: Something went wrong)])
*/

await Effect.runPromiseExit(tapping1) // => Exit.fail("NetworkError")
await Effect.runPromiseExit(tapping2) // => Exit.die(new Error("Something went wrong"))
```

### tapDefect

Specifically inspects non-recoverable failures or defects in an effect (i.e., one or more [Die](/docs/data-types/cause/#die) causes).

**Example** (Inspecting Defects)

```ts twoslash import.meta.vitest name="inspecting-defects-1"
import { Effect, Console, Exit } from "effect"

// Simulate a task that fails with a recoverable error
const task1: Effect.Effect<number, string> = Effect.fail("NetworkError")

// tapDefect won't log anything because NetworkError is not a defect
const tapping1 = Effect.tapDefect(task1, (cause) => Console.log(`defect: ${cause}`))

Effect.runFork(tapping1)
/*
No Output
*/

// Simulate a severe failure in the system
const task2: Effect.Effect<number, string> = Effect.die(new Error("Something went wrong"))

// Log the defect using tapDefect
const tapping2 = Effect.tapDefect(task2, (cause) => Console.log(`defect: ${cause}`))

Effect.runFork(tapping2)
/*
Output:
defect: Error: Something went wrong
*/

await Effect.runPromiseExit(tapping1) // => Exit.fail("NetworkError")
await Effect.runPromiseExit(tapping2) // => Exit.die(new Error("Something went wrong"))
```

### tapBoth

Inspects both success and failure outcomes of an effect, performing different actions based on the result.

**Example** (Inspecting Both Success and Failure)

```ts twoslash import.meta.vitest name="inspecting-both-success-and-failure-1"
import { Effect, Random, Console } from "effect"

// Simulate a task that might fail
const task = Effect.filterOrFail(
  Random.nextBetween(-1, 1),
  (n) => n >= 0,
  () => "random number is negative",
)

// Use tapError + tap to log both success and failure outcomes
const tapping = task.pipe(
  Effect.tapError((error) => Console.log(`failure: ${error}`)),
  Effect.tap((randomNumber) => Console.log(`random number: ${randomNumber}`)),
)

Effect.runFork(tapping)
/*
Example Output:
failure: random number is negative
*/
```

## Exposing Errors in The Success Channel

The `Effect.result` function transforms an `Effect<A, E, R>` into an effect that encapsulates both potential failure and success within a [Result](/docs/data-types/result/) data type:

```ts showLineNumbers=false
Effect<A, E, R> -> Effect<Result<A, E>, never, R>
```

This means if you have an effect with the following type:

```ts showLineNumbers=false
Effect<string, HttpError, never>
```

and you call `Effect.result` on it, the type becomes:

```ts showLineNumbers=false
Effect<Result<string, HttpError>, never, never>
```

The resulting effect cannot fail because the potential failure is now represented within the `Result`'s `Failure` type.
The error type of the returned `Effect` is specified as `never`, confirming that the effect is structured to not fail.

This function becomes especially useful when recovering from effects that may fail when using [Effect.gen](/docs/getting-started/using-generators/#understanding-effectgen):

**Example** (Using `Effect.result` to Handle Errors)

```ts twoslash import.meta.vitest name="using-effect-result-to-handle-errors-1"
import { Effect, Result, Console } from "effect"

// Simulate a task that fails
//
//      ┌─── Effect<number, string, never>
//      ▼
const program = Effect.fail("Oh uh!").pipe(Effect.as(2))

//      ┌─── Effect<number, never, never>
//      ▼
const recovered = Effect.gen(function* () {
  //      ┌─── Result<number, string>
  //      ▼
  const failureOrSuccess = yield* Effect.result(program)
  if (Result.isFailure(failureOrSuccess)) {
    const error = failureOrSuccess.failure
    yield* Console.log(`failure: ${error}`)
    return 0
  } else {
    const value = failureOrSuccess.success
    yield* Console.log(`success: ${value}`)
    return value
  }
})

Effect.runPromise(recovered).then(console.log)
/*
Output:
failure: Oh uh!
*/

await Effect.runPromise(recovered) // => 0
```

## Exposing the Cause in The Success Channel

You can use the `Effect.cause` function to expose the cause of an effect, which is a more detailed representation of failures, including error messages and defects.

**Example** (Logging the Cause of Failure)

```ts twoslash import.meta.vitest name="logging-the-cause-of-failure-1"
import { Effect, Exit, Console } from "effect"

//      ┌─── Effect<number, string, never>
//      ▼
const program = Effect.fail("Oh uh!").pipe(Effect.as(2))

//      ┌─── Effect<void, never, never>
//      ▼
const recovered = Effect.gen(function* () {
  const exit = yield* Effect.exit(program)
  if (Exit.isFailure(exit)) {
    yield* Console.log(exit.cause)
  }
})

await Effect.runPromise(Effect.exit(program)) // => Exit.fail("Oh uh!")
```

## Merging the Error Channel into the Success Channel

The `Effect.merge` function allows you to combine the error channel with the success channel. This results in an effect that never fails; instead, both successes and errors are handled as values in the success channel.

**Example** (Combining Error and Success Channels)

```ts twoslash import.meta.vitest name="combining-error-and-success-channels-1"
import { Effect } from "effect"

//      ┌─── Effect<number, string, never>
//      ▼
const program = Effect.fail("Oh uh!").pipe(Effect.as(2))

//      ┌─── Effect<string | number, never, never>
//      ▼
const recovered = Effect.catch(program, Effect.succeed)

await Effect.runPromise(recovered) // => "Oh uh!"
```

## Flipping Error and Success Channels

The `Effect.flip` function allows you to switch the error and success channels of an effect. This means that what was previously a success becomes the error, and vice versa.

**Example** (Swapping Error and Success Channels)

```ts twoslash import.meta.vitest name="swapping-error-and-success-channels-1"
import { Effect } from "effect"

//      ┌─── Effect<number, string, never>
//      ▼
const program = Effect.fail("Oh uh!").pipe(Effect.as(2))

//      ┌─── Effect<string, number, never>
//      ▼
const flipped = Effect.flip(program)

await Effect.runPromise(flipped) // => "Oh uh!"
```
